--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,10 +7,11 @@ $color-primary-violet: hsl(257, 27%, 26%);
 $color-secondary-red: hsl(0, 87%, 67%);
 
   // neutral
+$color-neutral-white: #ffffff;
 $color-neutral-gray: hsl(0, 0%, 75%);
 $color-neutral-gray-violet:hsl(257, 7%, 63%);
 $color-neutral-dark-blue:hsl(255, 11%, 22%);
-$color-neutral-dark-violet:hsl(255, 11%, 22%);
+$color-neutral-dark-violet:hsl(260, 8%, 14%);
 
 // defaults
 $font-family: 'Poppins', sans-serif;;
