--- a/src/index.scss
+++ b/src/index.scss
@@ -9,13 +9,9 @@
 body {
   min-height: 100vh;
   width: 100%;
-  margin: 0;
   font-family: variables.$font-family;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 500;
-  background-color: variables.$color-light-grayish-cyan;
-  color: variables.$color-dark-cyan;
-  display: grid;
-  place-items: center;
+  color: variables.$color-neutral-dark-blue;
 }
