--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,18 @@
 @use 'styles/variables';
 
 #root {
-  max-width: 1110px;
   margin: 40px auto;
-  padding: 0 20px;
   display: block;
+}
+
+.container {
+  width: 100%;
+
+  .wrapper {
+    max-width: 1110px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
 }
 
 .btn {
@@ -19,89 +27,153 @@
     color: variables.$color-neutral-white;
     opacity: .5;
   }
+
+  &.big {
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 12px 30px;
+  }
 }
 
 .nav {
-  display: flex;
-  flex: 1;
-  align-items: center;
-  gap: 40px;
-  font-weight: 700;
 
-  .nav__logo {
-    img {
-      height: 40px;
-      display: block;
-    }    
-  }
-
-  .nav__links {
-    ul {
-      list-style: none;
-      display: flex;
-      gap: 30px;
-
-      li {
-        a {
-          color: variables.$color-neutral-gray-violet;
-          text-decoration: none;
-          transition: .3s;
-
-          &:hover {
-            color: variables.$color-neutral-dark-blue;
-          }
-        }        
-      }
-    }
-  }
-
-  .nav__actions {
-    margin-left: auto;
+  .wrapper {
     display: flex;
+    flex: 1;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
+    font-weight: 700; 
 
-    a {
-      color: variables.$color-neutral-gray-violet;
-      text-decoration: none;
-      transition: .3s;
+    .nav__logo {
+      img {
+        height: 40px;
+        display: block;
+      }    
+    }
 
-      &.btn {
-        color: variables.$color-neutral-white;
+    .nav__links {
+      ul {
+        list-style: none;
+        display: flex;
+        gap: 30px;
 
-        &:hover {
-          color: variables.$color-neutral-white;
+        li {
+          a {
+            color: variables.$color-neutral-gray-violet;
+            text-decoration: none;
+            transition: .3s;
+
+            &:hover {
+              color: variables.$color-neutral-dark-blue;
+            }
+          }        
         }
       }
+    }
 
-      &:hover {
-        color: variables.$color-neutral-dark-blue;
+    .nav__actions {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      gap: 30px;
+
+      a {
+        color: variables.$color-neutral-gray-violet;
+        text-decoration: none;
+        transition: .3s;
+
+        &.btn {
+          color: variables.$color-neutral-white;
+
+          &:hover {
+            color: variables.$color-neutral-white;
+          }
+        }
+
+        &:hover {
+          color: variables.$color-neutral-dark-blue;
+        }
       }
     }
   }
 }
 
 .hero {
-  padding: 120px 0;
+  padding: 150px 0;
+  /*background-image: url("./assets/illustration-working.svg");
+  background-repeat: no-repeat;
+  background-position: right;*/
 
-  > div {
-    width: 50%;
+  .wrapper {   
+    display: flex;
+
+    & > div {
+      position: relative;
+      flex: 1;
+    }
+  }  
+
+  img {
+    width: 700px;
+    height: auto;
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: -50px;
   }
 
   h1 {
-    font-size: 4.5rem;
+    font-size: 4.6rem;
     line-height: 5rem;
   }
 
   .hero__subtitle {
-    font-size: 1.4rem;
+    font-size: 1.35rem;
     color: variables.$color-neutral-gray-violet;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
+    margin-top: 10px;
   }
+}
 
-  .btn {
-    font-size: 1.2rem;
-    font-weight: 700;
-    padding: 12px 30px;
+.call-to-action {
+  background-color: variables.$color-primary-violet;
+  background-image: url("./assets/bg-boost-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  text-align: center;
+
+  .wrapper {   
+    padding: 50px 0 60px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    flex-grow: 0;
+
+    h3 {
+      color: variables.$color-neutral-white;
+      font-size: 2.5rem;
+    }
+  }
+}
+
+.footer {
+  background-color: variables.$color-neutral-dark-violet;
+
+  .wrapper {   
+    padding: 50px 0;
+    display: flex;
+
+    .footer__logo {
+      svg {
+
+      }
+    }
+
+    h3 {
+      color: variables.$color-neutral-white;
+      font-size: 2.5rem;
+    }
   }
 }
