--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,9 +5,11 @@ $color-primary-violet: hsl(257, 27%, 26%);
 
   // secondary
 $color-secondary-red: hsl(0, 87%, 67%);
+$color-secondary-action: #9de1e2;
 
   // neutral
 $color-neutral-white: #ffffff;
+$color-neutral-bg-gray: #e4e5ea;
 $color-neutral-gray: hsl(0, 0%, 75%);
 $color-neutral-gray-violet:hsl(257, 7%, 63%);
 $color-neutral-dark-blue:hsl(255, 11%, 22%);
