--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@
     background-color: variables.$color-secondary-action;
   }
 
-  &.big {
+  &.btn--big {
     font-size: 1.2rem;
     font-weight: 700;
     padding: 12px 35px;
@@ -137,9 +137,52 @@
   }
 }
 
+.shortener {
+  margin-bottom: -90px;
+  position: relative;
+  .wrapper {
+    background-color: variables.$color-primary-violet;
+    background-image: url("./assets/bg-boost-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-size: 150%;
+    text-align: center;
+    padding: 60px;
+    border-radius: 15px;
+
+    form {
+      display: flex;
+      gap: 30px;    
+
+      input {
+        width: 100%;
+        border-radius: 10px;
+        border: none;
+        padding: 0 30px;
+        font-size: 1.2rem;
+
+        &:focus-visible {
+          outline: none;
+        }
+      }
+
+      button {
+        border: none;
+        border-radius: 10px;
+        padding: 20px 40px;
+        white-space: nowrap;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
 .features {
   background-color: variables.$color-neutral-bg-gray;
-  padding: 200px 0 100px 0;
+  padding: 190px 0 100px 0;
 
   .wrapper {
     h3 {
@@ -158,7 +201,7 @@
     }
 
     .features__cards {
-      margin-top: 80px;
+      margin-top: 100px;
       display: flex;
       gap: 30px;
 
@@ -167,6 +210,7 @@
         padding: 40px;
         border-radius: 5px;
         position: relative;
+        height: 100%;
 
         div {
           background-color: variables.$color-primary-violet;
