--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,9 @@ body {
   font-weight: 500;
   color: variables.$color-neutral-dark-blue;
 }
+
+input {
+  font-family: variables.$font-family;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
