ADD hamburger icon & state

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -10,6 +10,11 @@
       .nav__actions {
         display: none;
       }
+
+      .nav__hamburguer {
+        display: block;
+        margin-left: auto;
+      }
     }
   } 
 }
