--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,15 @@
         }
       }
     }
+
+    .nav__hamburguer {
+      display: none;
+      fill: variables.$color-neutral-gray-violet;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 }
 
