--- a/src/App.scss
+++ b/src/App.scss
@@ -7,11 +7,11 @@
 
 .container {
   width: 100%;
+  padding: 0 20px;
 
   .wrapper {
     max-width: 1110px;
     margin: 0 auto;
-    padding: 0 20px;
   }
 }
 
@@ -21,6 +21,7 @@
   background-color: variables.$color-primary-cyan;
   padding: 8px 25px;
   border-radius: 50px;
+  border: none;
   transition: .3s;
 
   &:hover {
@@ -108,7 +109,8 @@
 }
 
 .hero {
-  padding: 150px 0;
+  padding-top: 150px;
+  padding-bottom: 150px;
   overflow-x: hidden;
   /*background-image: url("./assets/illustration-working.svg");
   background-repeat: no-repeat;
@@ -148,11 +150,31 @@
 }
 
 .shortener {
-  margin-bottom: -90px;
+  background-color: variables.$color-neutral-bg-gray;
   position: relative;
   padding: 0 20px;
 
-  .wrapper {
+  &::before {
+    content: "";
+    position: absolute;
+    width: calc(100% + 20px);
+    height: 83px;
+    background-color: variables.$color-neutral-white;;
+    z-index: 1;
+    left: -20px;
+  }
+
+  button {
+    border-radius: 10px;
+    padding: 20px 40px;
+    white-space: nowrap;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .wrapper__form {
     background-color: variables.$color-primary-violet;
     background-image: url("./assets/bg-boost-desktop.svg");
     background-repeat: no-repeat;
@@ -161,6 +183,8 @@
     text-align: center;
     padding: 60px;
     border-radius: 15px;
+    position: relative;
+    z-index: 2;
 
     form {
       display: flex;
@@ -173,20 +197,57 @@
         padding: 0 30px;
         font-size: 1.2rem;
 
-        &:focus-visible {
+        &::placeholder {
+          opacity: .5;
+        }
+
+        &.invalid {
+          outline: 2px solid variables.$color-invalid;
+          
+          &::placeholder {
+            color: variables.$color-invalid;
+            opacity: .5;
+          }
+        }
+
+        &:not(.invalid):focus-visible {
           outline: none;
         }
       }
+    }
+
+    .invalid-message {
+      color: variables.$color-invalid;
+      position: absolute;
+      top: 115px;
+      text-align: left;
+    }
+  }
+
+  .wrapper__shortened {
+    .shortened  {
+      padding: 20px;
+      background-color: variables.$color-neutral-white;
+      border-radius: 8px;
+      display: flex;
+      gap: 30px;
+      align-items: center;
+      margin-top: 20px;
+
+      .original-link {
+        margin-right: auto;
+      }
+
+      a {
+        text-decoration: none;
+        color: variables.$color-primary-cyan;
+        text-align: right;
+      }
 
       button {
-        border: none;
-        border-radius: 10px;
-        padding: 20px 40px;
-        white-space: nowrap;
-
-        &:hover {
-          cursor: pointer;
-        }
+        padding: 10px 20px;
+        border-radius: 5px;
+        width: 90px;
       }
     }
   }
@@ -194,7 +255,8 @@
 
 .features {
   background-color: variables.$color-neutral-bg-gray;
-  padding: 190px 0 100px 0;
+  padding-top: 150px;
+  padding-bottom: 100px;
 
   .wrapper {
     h3 {
