--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
   &.btn--big {
     font-size: 1.2rem;
     font-weight: 700;
-    padding: 12px 35px;
+    padding: 20px 40px;
   }
 }
 
@@ -158,7 +158,7 @@
     content: "";
     position: absolute;
     width: calc(100% + 20px);
-    height: 83px;
+    height: 91px;
     background-color: variables.$color-neutral-white;;
     z-index: 1;
     left: -20px;
@@ -166,7 +166,6 @@
 
   button {
     border-radius: 10px;
-    padding: 20px 40px;
     white-space: nowrap;
 
     &:hover {
@@ -202,7 +201,7 @@
         }
 
         &.invalid {
-          outline: 2px solid variables.$color-invalid;
+          outline: 3px solid variables.$color-invalid;
           
           &::placeholder {
             color: variables.$color-invalid;
@@ -219,14 +218,15 @@
     .invalid-message {
       color: variables.$color-invalid;
       position: absolute;
-      top: 115px;
+      top: 130px;
+      font-style: italic;
       text-align: left;
     }
   }
 
   .wrapper__shortened {
     .shortened  {
-      padding: 20px;
+      padding: 15px 30px;
       background-color: variables.$color-neutral-white;
       border-radius: 8px;
       display: flex;
@@ -248,6 +248,7 @@
         padding: 10px 20px;
         border-radius: 5px;
         width: 90px;
+        font-weight: 700;
       }
     }
   }
