--- a/src/App.scss
+++ b/src/App.scss
@@ -52,47 +52,54 @@
       }    
     }
 
-    .nav__links {
-      ul {
-        list-style: none;
-        display: flex;
-        gap: 30px;
-
-        li {
-          a {
-            color: variables.$color-neutral-gray-violet;
-            text-decoration: none;
-            transition: .3s;
-
-            &:hover {
-              color: variables.$color-neutral-dark-blue;
-            }
-          }        
-        }
-      }
-    }
-
-    .nav__actions {
-      margin-left: auto;
+    .mobile__wrapper {
       display: flex;
+      width: 100%;
       align-items: center;
-      gap: 30px;
+      justify-content: space-between;
 
-      a {
-        color: variables.$color-neutral-gray-violet;
-        text-decoration: none;
-        transition: .3s;
-
-        &.btn {
-          color: variables.$color-neutral-white;
-
-          &:hover {
-            color: variables.$color-neutral-white;
+      .nav__links {
+        ul {
+          list-style: none;
+          display: flex;
+          gap: 30px;
+  
+          li {
+            a {
+              color: variables.$color-neutral-gray-violet;
+              text-decoration: none;
+              transition: .3s;
+  
+              &:hover {
+                color: variables.$color-neutral-dark-blue;
+              }
+            }        
           }
         }
-
-        &:hover {
-          color: variables.$color-neutral-dark-blue;
+      }
+  
+      .nav__actions {
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+  
+        a {
+          color: variables.$color-neutral-gray-violet;
+          text-decoration: none;
+          transition: .3s;
+  
+          &.btn {
+            color: variables.$color-neutral-white;
+  
+            &:hover {
+              color: variables.$color-neutral-white;
+            }
+          }
+  
+          &:hover {
+            color: variables.$color-neutral-dark-blue;
+          }
         }
       }
     }
@@ -249,6 +256,10 @@
         border-radius: 5px;
         width: 90px;
         font-weight: 700;
+
+        &.copied{
+          background-color: variables.$color-primary-violet;
+        }
       }
     }
   }
