UPDATE migrate API service and and error and fetching state

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,13 @@
     background-color: variables.$color-secondary-action;
   }
 
+  &:disabled,
+  &[disabled] {
+    color: variables.$color-neutral-white;
+    background-color: variables.$color-secondary-action;
+    cursor: default !important;
+  }
+
   &.btn--big {
     font-size: 1.2rem;
     font-weight: 700;
