--- a/src/App.scss
+++ b/src/App.scss
@@ -250,6 +250,10 @@
 
       .original-link {
         margin-right: auto;
+        max-width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
 
       a {
@@ -261,7 +265,7 @@
       button {
         padding: 10px 20px;
         border-radius: 5px;
-        width: 100px;
+        min-width: 100px;
         font-weight: 700;
 
         &.copied{
